Fixed nav bar alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@ h3{
 
 }
 
+li {
+    font-weight: 700;
+}
 .main-header{
     margin-top: 20px;
 }
@@ -21,6 +24,7 @@ h3{
     display: block;
     margin-bottom: 30px;
     margin-left: -20px;
+    
     
 }
 a {
@@ -59,6 +63,7 @@ a {
     border-top: 0.5px solid lightgrey;
     color: black;
     font-size: .8em;
+    font-weight: 700;
 }
 
 .name {
@@ -86,6 +91,7 @@ a {
         margin-bottom: 30px;
         margin-right: 60px;
         padding-left: 20px;
+        float: right;
     }
 
     .intro {
